--- a/gb/16/11/11/n8485755.md
+++ b/gb/16/11/11/n8485755.md
@@ -1,14 +1,14 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/reqcja3941/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/reqcja3941/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/reqcja3941/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/reqcja3941/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/reqcja3941/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/reqcja3941/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/reqcja3941/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/reqcja3941/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/reqcja3941/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/reqcja3941/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/reqcja3941/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/reqcja3941/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/reqcja3941/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/reqcja3941/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/reqcja3941/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/reqcja3941/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/reqcja3941/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/reqcja3941/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/reqcja3941/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/reqcja3941/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/reqcja3941/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/reqcja3941/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/reqcja3941/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/reqcja3941/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/reqcja3941/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/reqcja3941/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/reqcja3941/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/reqcja3941/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/reqcja3941/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/reqcja3941/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/reqcja3941/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/reqcja3941/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/reqcja3941/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/reqcja3941/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/reqcja3941/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/reqcja3941/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/reqcja3941/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/reqcja3941/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/reqcja3941/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/reqcja3941/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/reqcja3941/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/reqcja3941/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/reqcja3941/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/reqcja3941/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/reqcja3941/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/reqcja3941/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/reqcja3941/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ydbzqt347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>冥想的诸多健康益处（上）</h2>
 
 <h6></h6>
 <hr>
-<p>越来越多证据表明，<ahref="https://github.com/reqcja3941/djy/blob/master/gb/tag/%E5%86%A5%E6%83%B3.md#1">冥想</a>可改善健康和心情，如正念认知疗法（MBCT），有时用于抑郁症治疗。脑成像技术也证明，冥想确对大脑有诸般益处。</p>
-<p>核磁共振（MRI）扫描结果显示，长期<ahref="https://github.com/reqcja3941/djy/blob/master/gb/tag/%E5%86%A5%E6%83%B3.md#1">冥想</a>可使大脑外层（即大脑皮层）的结构发生改变。同时，研究已发现，冥想者大脑中与注意力和感觉讯息处理相关的区域更厚。</p>
-<p>先前研究已经证明冥想的一些益处，如提升专注力、记忆力、工作<ahref="https://github.com/reqcja3941/djy/blob/master/gb/tag/%E6%95%88%E7%8E%87.md#1">效率</a>和创造力等。近期研究则显示，冥想有助于抵御老化带来的脑体积损失。</p>
-<p>简言之，冥想可被视为一种脑体操，能够<ahref="https://github.com/reqcja3941/djy/blob/master/gb/tag/%E5%81%A5%E8%84%91.md#1">健脑</a>、延缓其衰老。另有一些研究证明，冥想不仅有益大脑，也具有抗炎和影响基因表达的功效——这些都可整体改善生理健康、使人延寿。</p>
+<p>越来越多证据表明，<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%86%A5%E6%83%B3.md#1">冥想</a>可改善健康和心情，如正念认知疗法（MBCT），有时用于抑郁症治疗。脑成像技术也证明，冥想确对大脑有诸般益处。</p>
+<p>核磁共振（MRI）扫描结果显示，长期<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%86%A5%E6%83%B3.md#1">冥想</a>可使大脑外层（即大脑皮层）的结构发生改变。同时，研究已发现，冥想者大脑中与注意力和感觉讯息处理相关的区域更厚。</p>
+<p>先前研究已经证明冥想的一些益处，如提升专注力、记忆力、工作<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%95%88%E7%8E%87.md#1">效率</a>和创造力等。近期研究则显示，冥想有助于抵御老化带来的脑体积损失。</p>
+<p>简言之，冥想可被视为一种脑体操，能够<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%81%A5%E8%84%91.md#1">健脑</a>、延缓其衰老。另有一些研究证明，冥想不仅有益大脑，也具有抗炎和影响基因表达的功效——这些都可整体改善生理健康、使人延寿。</p>
 <h2><span style="color: #008000;"><strong>长期冥想可减少脑体积损失</strong></span></h2>
 <p>该领域的最新研究之一观察了年龄在24至77岁间的50位长期冥想者和 50位对照者。一如预期，对照者随年龄增长而有脑体积损失现象。</p>
 <p>而冥想者中患老年化脑萎缩的较少。正如GMA新闻所报导：<br />
@@ -17,7 +17,7 @@
 <p>该项研究的第一作者告诉路透社健康频道，研究人员本预想在长期冥想者的特定大脑区域发现更多灰质，‘但是，我们发现这种影响实则遍及整个大脑’。库尔斯（Florian Kurth）博士说道……</p>
 <p>冥想者的大脑似比同年龄的一般人保养得更好。而且，研究人员惊奇地发现，冥想者整个大脑中的‘老龄化灰质损失’更少。”</p>
 <figure id="attachment_8485762" aria-describedby="caption-attachment-8485762" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2016/11/100206215015100171.jpg"><img class="wp-image-8485762 size-medium" src="https://i.epochtimes.com/assets/uploads/2016/11/100206215015100171-450x340.jpg" width="450" b="340" /></a><figcaption id="caption-attachment-8485762" class="wp-caption-text">冥想者整个大脑中的老龄化灰质损失更少。(Cat Rooney/Epoch Times)</figcaption></figure>
-<h2><span style="color: #008000;"><strong>冥想如何提升工作<ahref="https://github.com/reqcja3941/djy/blob/master/gb/tag/%E6%95%88%E7%8E%87.md#1">效率</a></strong></span></h2>
+<h2><span style="color: #008000;"><strong>冥想如何提升工作<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%95%88%E7%8E%87.md#1">效率</a></strong></span></h2>
 <p>在谷歌专题访谈中，冥想专家弗莱彻（Emily Fletcher）解释了两种常见冥想形式的差别及其对大脑的影响。</p>
 <p>她还谈到，冥想与咖啡因有相似性，两者都有激发活力、提升效率的功效，但冥想不会有咖啡因产生的副作用。</p>
 <p>如弗莱彻所解释的，咖啡因类似于大脑全天候分泌的化学物质“腺苷”。腺苷使人困倦，咖啡因则可有效阻断脑中的腺苷受体，让大脑无法感知其疲劳程度。</p>
@@ -32,9 +32,9 @@
 </em>“（我们会说）我也想要冥想，我知道我需要，但我现在这么忙，都快忙疯了，怎么冥想。他们不理解的是当你真正地开始练习冥想，实际上你会获得更多时间。这是个奇怪的悖论。</p>
 <p>“即便你一天拿出相当的时间来冥想，因为脑功能得到如此显着的改善，你完成任务会快得多，最终你会拥有更多时间，睡眠质量更高，因为你的睡眠只是用来睡眠，因为你的压力已在冥想的时间里得到释放。”</p>
 <figure id="attachment_8485766" aria-describedby="caption-attachment-8485766" style="width: 300px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2016/11/0905301117251892.jpg"><img class="wp-image-8485766 size-small" title="Falun Dafa - 5th exercise " src="https://i.epochtimes.com/assets/uploads/2016/11/0905301117251892-300x450.jpg" alt="Falun Dafa - 5th exercise " width="300" b="450" /></a><figcaption id="caption-attachment-8485766" class="wp-caption-text">当你真正地开始练习冥想，实际上你会获得更多时间。图为法轮功静功修炼。（大纪元）</figcaption></figure>
-<h2><span style="color: #008000;"><strong>冥想在<ahref="https://github.com/reqcja3941/djy/blob/master/gb/tag/%E5%81%A5%E8%84%91.md#1">健脑</a>之外的益处</strong></span></h2>
+<h2><span style="color: #008000;"><strong>冥想在<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%81%A5%E8%84%91.md#1">健脑</a>之外的益处</strong></span></h2>
 <p>压力被公认为引发健康全线下降的罪魁祸首，而冥想纾解压力的功效具有重要的健康裨益。美国卡内基梅隆大学的研究人员新近发表了一项研究成果，称其发现了正念（mindfulness）影响生理健康的生物学机制。</p>
-<p>简单地说，冥想通过脑中的“<ahref="https://github.com/reqcja3941/djy/blob/master/gb/tag/%E5%87%8F%E5%8E%8B.md#1">减压</a>路径”来影响生理健康。如新闻稿中解释的：<br />
+<p>简单地说，冥想通过脑中的“<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%87%8F%E5%8E%8B.md#1">减压</a>路径”来影响生理健康。如新闻稿中解释的：<br />
 <em><strong><br />
 </strong></em>“当个体感到压力时，负责有意识思考和规划的前额叶皮质中的活动会减弱，而快速激活应激反应的扁桃腺、下丘脑和前扣带皮层则趋于活跃。</p>
 <p>“一些研究显示，正念可使压力下的这两种反应模式发生逆转；其可增加前额叶活力，使得生物应激反应得到调节和抑制。</p>
@@ -52,7 +52,7 @@
 <p>还有一些研究，如本森—亨利身心医学研究所（Benson-Henry Institute for Mind Body Medicine）的研究，通过评估冥想前后的基因表达，来尝试量化放松反应的益处，并对短期和长期冥想练习的功效做了比较。</p>
 <p>他们的一项发现是冥想具有抗炎功效。一项研究中，八周冥想活动的参与者和长期冥想者，其抗氧化剂分泌、端粒酶活性和氧化应激活动都有所增加。</p>
 <p>研究人员也指出，冥想的益处与（练习）量相关，即使做一次冥想，都会带来变化。</p>
-<p>后篇：<em><span style="text-decoration: underline;"><span style="color: #008000;"><a style="color: #008000; text-decoration: underline;" href="https://github.com/reqcja3941/djy/blob/master/gb/16/11/14/n8490487.md#1" target="_blank" rel="noopener noreferrer">冥想的诸多健康益处（下）</a></span></span></em></p>
+<p>后篇：<em><span style="text-decoration: underline;"><span style="color: #008000;"><a style="color: #008000; text-decoration: underline;" href="https://github.com/ydbzqt347/djy/blob/master/gb/16/11/14/n8490487.md#1" target="_blank" rel="noopener noreferrer">冥想的诸多健康益处（下）</a></span></span></em></p>
 <p><em><span style="color: #808080;">（本文原载<a style="color: #808080;" href="http://articles.mercola.com/sites/articles/archive/2016/06/18/benefits-meditation.aspx" target="_blank" rel="noopener noreferrer">mercola.com</a>，待续。）</span></em></p>
 <p>责任编辑：茉莉◇</p>
 
@@ -60,47 +60,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/reqcja3941/djy/blob/master/gb/16/9/5/n8268207.md#1">健康专家：幸福快乐的人有这22个积极的习惯</a></li>
-<li><a href="https://github.com/reqcja3941/djy/blob/master/gb/16/9/9/n8284378.md#1">晨间想法塑造你的一天 从清早开始培养正念</a></li>
-<li><a href="https://github.com/reqcja3941/djy/blob/master/gb/16/9/28/n8346798.md#1">高压时代教子有方 父母纾压12法</a></li>
-<li><a href="https://github.com/reqcja3941/djy/blob/master/gb/16/9/29/n8350607.md#1">实验证明：学打坐冥想 欠正念者可平定情绪</a></li>
-<li><a href="https://github.com/reqcja3941/djy/blob/master/gb/16/10/7/n8377222.md#1">静修开发特异功能：美国思维科学家调研著述</a></li>
-<li><a href="https://github.com/reqcja3941/djy/blob/master/gb/16/10/12/n8388783.md#1">组图：22位当代成功人士 起床早得想不到</a></li>
-<li><a href="https://github.com/reqcja3941/djy/blob/master/gb/16/10/23/n8423905.md#1">静坐冥想有益母婴健康 或成维州产科护理项目</a></li>
-<li><a href="https://github.com/reqcja3941/djy/blob/master/gb/16/10/27/n8435162.md#1">简单六步骤 无需闹钟助你自然醒</a></li>
-<li><a href="https://github.com/reqcja3941/djy/blob/master/gb/16/11/9/n8478085.md#1">肾上腺疲劳的四种恢复方法（中）</a></li>
-<li><a href="https://github.com/reqcja3941/djy/blob/master/gb/16/11/9/n8478170.md#1">肾上腺疲劳的四种恢复方法（下）</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/9/5/n8268207.md#1">健康专家：幸福快乐的人有这22个积极的习惯</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/9/9/n8284378.md#1">晨间想法塑造你的一天 从清早开始培养正念</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/9/28/n8346798.md#1">高压时代教子有方 父母纾压12法</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/9/29/n8350607.md#1">实验证明：学打坐冥想 欠正念者可平定情绪</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/10/7/n8377222.md#1">静修开发特异功能：美国思维科学家调研著述</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/10/12/n8388783.md#1">组图：22位当代成功人士 起床早得想不到</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/10/23/n8423905.md#1">静坐冥想有益母婴健康 或成维州产科护理项目</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/10/27/n8435162.md#1">简单六步骤 无需闹钟助你自然醒</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/11/9/n8478085.md#1">肾上腺疲劳的四种恢复方法（中）</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/11/9/n8478170.md#1">肾上腺疲劳的四种恢复方法（下）</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank">这些官员为何起诉江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/4/2/n10271780.md#1" target="_blank">中共淫乱的前生今世（9）四大基础</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/2/11/n4637812.md#1" target="_blank">修炼法轮功 母亲摆脱严重糖尿病重获新生</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank">解体中共复兴中华</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/20/2/10/n11858311.md#1" target="_blank">王友群：习仲勋等支持气功研究的内幕</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/12/10/18/n3709213.md#1" target="_blank">在东方健康博览会上见到李洪志师父</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/reqcja3941/djy/blob/master/gb/22/2/3/n13553506.md#1">【未解之谜】梅辛传之三：希特勒的预言</a></li>
-<li><a href="https://github.com/reqcja3941/djy/blob/master/gb/22/2/17/n13582748.md#1">【奇事】这一种算命术连皇帝都大为惊奇</a></li>
-<li><a href="https://github.com/reqcja3941/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
-<li><a href="https://github.com/reqcja3941/djy/blob/master/gb/22/2/14/n13576687.md#1">【百年真相】瞒天过海 中共炮制“美军细菌战”</a></li>
-<li><a href="https://github.com/reqcja3941/djy/blob/master/gb/22/1/27/n13533579.md#1">唐朝皇族后裔的教训 德性有亏一夕化虎</a></li>
-<li><a href="https://github.com/reqcja3941/djy/blob/master/gb/22/2/25/n13605539.md#1">【财商天下】俄入侵乌克兰 北京被拉下水？</a></li>
-<li><a href="https://github.com/reqcja3941/djy/blob/master/gb/22/2/26/n13607594.md#1">【财商天下】失业潮继续扩大 中共如何稳预期</a></li>
-<li><a href="https://github.com/reqcja3941/djy/blob/master/gb/22/2/25/n13605976.md#1">【秦鹏直播】铁链女一声惊人 说明不是小花梅</a></li>
-<li><a href="https://github.com/reqcja3941/djy/blob/master/gb/22/2/25/n13605758.md#1">应对俄乌开战 北约反应部队启动 史上首次</a></li>
-<li><a href="https://github.com/reqcja3941/djy/blob/master/gb/22/2/24/n13603115.md#1">鼓鼓钱包失而复得 杜汶泽妻田蕊妮大赞台湾</a></li>
-<li><a href="https://github.com/reqcja3941/djy/blob/master/gb/22/2/24/n13602624.md#1">【更新2.24】美确信普京欲推翻乌现政权</a></li>
-<li><a href="https://github.com/reqcja3941/djy/blob/master/gb/22/2/24/n13603115.md#1">鼓鼓钱包失而复得 杜汶泽妻田蕊妮大赞台湾</a></li>
-<li><a href="https://github.com/reqcja3941/djy/blob/master/gb/22/2/25/n13605706.md#1">陈婷宣布取消“张艺谋妻子”微博头衔 引猜测</a></li>
-<li><a href="https://github.com/reqcja3941/djy/blob/master/gb/22/2/24/n13602961.md#1">产后10天俄乌开战 瑞莎焦虑乌克兰亲人全失联</a></li>
-<li><a href="https://github.com/reqcja3941/djy/blob/master/gb/22/2/24/n13603338.md#1">酒店隔离与好友成邻居 舒淇：巧到不能再巧</a></li>
-<li><a href="https://github.com/reqcja3941/djy/blob/master/gb/22/2/25/n13604262.md#1">西恩潘“人在乌克兰” 挺进战地拍入侵纪录片</a></li>
-<li><a href="https://github.com/reqcja3941/djy/blob/master/gb/22/2/24/n13602100.md#1">世界各地的长寿人群都吃些什么食物？</a></li>
-<li><a href="https://github.com/reqcja3941/djy/blob/master/gb/22/2/25/n13604960.md#1">坚果是抗糖尿病绝佳食物 防高血糖、并发症</a></li>
-<li><a href="https://github.com/reqcja3941/djy/blob/master/gb/22/2/18/n13586671.md#1">不吃早餐糖尿病风险增40％ 3组早餐养胃强身</a></li>
-<li><a href="https://github.com/reqcja3941/djy/blob/master/gb/22/2/24/n13602266.md#1">【健康1+1】感染Omicron自救方法</a></li>
-<li><a href="https://github.com/reqcja3941/djy/blob/master/gb/22/2/24/n13602281.md#1">金盏花对皮肤很好 还能消炎止痛、促伤口愈合</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13675586.md#1">沉睡二千五百年绝世神剑  先进科技惊震天下</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/12/21/n13451605.md#1">【百年真相】到底谁是特务？延安整风内幕</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/18/n13656536.md#1">【百年真相】发言3分钟右派20年 朱镕基说了啥</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/25/n13671775.md#1">【战争随笔】基辅印象 温暖而有风度</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13687492.md#1">【未解之谜】濒死体验 神启：生命可以选择</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689709.md#1">【唐瑞讲故事】朗读｜小熊维尼第五章</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688941.md#1">【秦鹏直播】乌克兰反攻开始？欧盟警告北京</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687190.md#1">王友群：朱镕基反对习近平三连任？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684346.md#1">应勇卸任湖北一把手 美分析师：是条大新闻</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13685194.md#1">上海防疫水深？ 张文宏消失 左派提路线斗争</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688133.md#1">台剧艺人陈熙锋喜迎千金 全程陪产记录感动</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687135.md#1">奥斯卡颁奖时挨史密斯一巴掌 洛克3天后首发声</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687324.md#1">睽违18年再合作 梁朝伟刘德华新片造型曝光</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684323.md#1">章子怡引对联悼东航空难 用词意外引热议</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684458.md#1">90后杨紫粉丝闹乌龙 功夫影星杨紫琼登热搜</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683454.md#1">5种超级蔬菜 抗氧化、提高免疫又防癌症</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683642.md#1">水果剥皮直接吃是错的！吃水果的7大误区</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13686139.md#1">研究：打新冠疫苗几个月后的心脏异常</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/29/n13681028.md#1">提高抗氧化水平 维生素C的6大好处</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13686756.md#1">巨星布鲁斯威利患失语症 医：警惕2大原因</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/reqcja3941/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/reqcja3941/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/16/11/11/n8485755.htm">冥想的诸多健康益处（上）</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/16/11/11/n8485755.htm">冥想的诸多健康益处（上）</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/reqcja3941/djy/blob/master/gb/16/11/11/n8485755.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/reqcja3941/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/reqcja3941/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/reqcja3941/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/reqcja3941/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/reqcja3941/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/reqcja3941/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/reqcja3941/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/reqcja3941/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/reqcja3941/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/reqcja3941/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/reqcja3941/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/reqcja3941/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/reqcja3941/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/reqcja3941/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/reqcja3941/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/reqcja3941/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/reqcja3941/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/reqcja3941/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/reqcja3941/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/reqcja3941/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/reqcja3941/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/reqcja3941/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/reqcja3941/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/reqcja3941/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/reqcja3941/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/reqcja3941/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/reqcja3941/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/reqcja3941/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/reqcja3941/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/reqcja3941/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/reqcja3941/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/reqcja3941/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/reqcja3941/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/reqcja3941/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/reqcja3941/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/reqcja3941/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/reqcja3941/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/reqcja3941/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/reqcja3941/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/reqcja3941/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/reqcja3941/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/reqcja3941/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/reqcja3941/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/reqcja3941/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/reqcja3941/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/reqcja3941/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/reqcja3941/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/reqcja3941/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ydbzqt347/djy/blob/master/gb/16/11/11/n8485755.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
